--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -48,11 +48,18 @@
 .shipVoyageList_content{width:560px;height:40px;margin:5px 8px;overflow:hidden;}
 .shipVoyageList_List{height:40px;width:7000000px;margin-left:0px}
 .shipVoyageList_List>li{display:inline-block;float:left;margin:0px 5px;width:70px;}
-.shipVoyageList_List>li>div{width:24px;height:24px;background:url("/images/ship.png");margin:0 auto;}
-/*.shipVoyageList_List>li>div{width:24px;height:24px;background:#ccc;margin:0 auto;}*/
+.shipVoyageList_List>li>div{width:24px;height:24px;background:url("/images/ship.png");margin:0 auto;cursor: pointer;}
+.shipVoyageList_List>li>.active{width:24px;height:24px;background:url("/images/ship-active.png");margin:0 auto; cursor: pointer;}
 .shipVoyageList_List>li>span{display:inline-block;width:70px;text-align:center;line-height:16px;height:16px;position:relative;top:-3px;font-size:12px;color:#fff;}
 
 /*航次详情——航次信息*/
+#voyageDetails>.fleet_title{width:100%;height:30px;position:relative;}
+#voyageDetails>.fleet_title>span{display:inline-block;width:10%;text-align:center;height:28px;line-height:28px;color:#fff;}
+#voyageDetails>.fleet_title>span:nth-child(1){margin-left:40%}
+/*.voyage_title{width:100%;height:30px;position:relative;}*/
+/*.voyage_title>span{display:inline-block;width:10%;text-align:center;height:28px;line-height:28px;color:#fff;}*/
+.voyage_title>span:nth-child(1){margin-left:40%}
+/*.voyage_title>span:nth-child(2){margin-left:-1%}*/
 .oneVoyageInfo{width:94%;margin:0 auto;}
 .oneVoyageInfo>ul{height:120px;}
 .oneVoyageInfo>ul>li{display:inline-block;height:20px;line-height:20px;margin-top:4px;font-size:13px;color:#fff;float:left;margin-right:15px;}
@@ -70,7 +77,8 @@
 .oneVoyageInfo>ul>li:nth-child(4)>input{width:45px;padding-left:4px;height:18px;color:#fff;position:relative;top:-1px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;}
 .oneVoyageInfo>ul>li:nth-child(5),.oneVoyageInfo>ul>li:nth-child(6){width:320px;position:relative;}
 .oneVoyageInfo>ul>li:nth-child(6){margin-right:0px;}
-.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:13px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:90px;padding-left:4px;height:18px;color:#fff;font-size:13px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
+/*.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:13px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}*/
 .oneVoyageInfo>ul>li:nth-child(5)>span,.oneVoyageInfo>ul>li:nth-child(6)>span{margin-left:38px;}
 /*.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;position:absolute;margin-left:5px;cursor:pointer;}*/
 /*.oneVoyageInfo>ul .checked{background:url("/images/anch-yes.png") center no-repeat}*/
