--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -19,7 +19,7 @@
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
     <script src="https://openlayers.org/en/v4.1.1/build/ol.js"></script>
-    <!--<script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>-->
+    <script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>
     <!--<script type="text/javascript" src="/javascripts/openlayer/v4.1.1/build/ol.js"></script>-->
     <script type="text/javascript" src="/javascripts/blmMap.js"></script>
     <script type="text/javascript" src="/javascripts/blmDraw.js"></script>
