--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1625,6 +1625,16 @@
             })
         })
     };
+
+    /**
+     * 流水样式
+     */
+    var sn_style = new ol.style.Style({
+        image: new ol.style.Icon({
+            src: 'images/position.png',
+            anchor: [0.5, 0.8]
+        })
+    })
 //    var pointer_add =  new ol.style.Style({
 //        image: new ol.style.Icon({
 //            src: 'images/pointerAdd.png'
