--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1580,7 +1580,7 @@
         })
     });
 
-//    // 被选择的图标
+    // 被选择的图标
     var choosed = new ol.style.Style({
         image: new ol.style.Icon({
             src: 'images/choose.png'
