--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -603,6 +603,7 @@
     <!--<div class="voyage_title">-->
         <span>航次详情</span>
         <span>(未确认)</span>
+        <div class="title_GoBackBtn"></div>
         <div class="title_offbtn"></div>
     </div>
     <div class="dividing_line"></div>
