--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -582,7 +582,7 @@
             </li>
         </ul>
         <ul class="voyageList_content">
-            <li><span>AAAAAAAAAAA</span><span>1234567</span><span>AAAAAAAAAAA</span><span>2007-02-03</span><span>AAAAAAAAAAA</span><span>2007-03-02</span></li>
+            <li><span>AAAAAAAAAAA</span><span>1234567</span><span>AAAAAAAAAAA</span><span>2007-02-03 00:00:00</span><span>AAAAAAAAAAA</span><span>2007-03-02 00:00:00</span></li>
             <li><span>AAAAAAAAAAA</span><span>1234567</span><span>AAAAAAAAAAA</span><span>2007-02-03</span><span>AAAAAAAAAAA</span><span>2007-03-02</span></li>
             <li><span>AAAAAAAAAAA</span><span>1234567</span><span>AAAAAAAAAAA</span><span>2007-02-03</span><span>AAAAAAAAAAA</span><span>2007-03-02</span></li>
             <li><span>AAAAAAAAAAA</span><span>1234567</span><span>AAAAAAAAAAA</span><span>2007-02-03</span><span>AAAAAAAAAAA</span><span>2007-03-02</span></li>
