--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -671,12 +671,12 @@
         </ul>
         <div class="oneVoyage_DockedInfo">
             <ul>
-                <li><span>序号</span><span>起止时间</span><span>历时</span><span>状态</span></li>
+                <li><span>序号</span><span>起止时间</span><span>历时</span><span>港口</span><span>状态</span></li>
             </ul>
             <ul class="oneVoyage_DockedList">
-                <li><span>01</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>01</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
-                        <option value="1">装港</option>
+                        <option value="1">装港锚泊</option>
                         <option value="2" selected="selected">卸港</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
@@ -687,9 +687,22 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>02</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>02</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
+                        <option value="3">航行</option>
+                        <option value="4">锚泊</option>
+                        <option value="5">补给</option>
+                        <option value="6">加油</option>
+                        <option value="7">修船</option>
+                        <option value="8">暂停</option>
+                        <option value="9">不明</option>
+                    </select>
+                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
+                <li><span>03</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
+                    <select>
+                        <option value="1">装港锚泊</option>
                         <option value="2" selected="selected">卸港</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
@@ -700,10 +713,10 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>03</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>04</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
@@ -713,10 +726,10 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>04</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>05</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
@@ -726,10 +739,10 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>05</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>06</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
@@ -739,10 +752,10 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>06</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>07</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
@@ -752,23 +765,10 @@
                         <option value="9">不明</option>
                     </select>
                 </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>07</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
+                <li><span>08</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>AAAAAAAAAAAA</span><span>
                     <select>
                         <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
-                        <option value="3">航行</option>
-                        <option value="4">锚泊</option>
-                        <option value="5">补给</option>
-                        <option value="6">加油</option>
-                        <option value="7">修船</option>
-                        <option value="8">暂停</option>
-                        <option value="9">不明</option>
-                    </select>
-                </span><div class="oneVoyage_EndBtn">航次结束</div></li>
-                <li><span>08</span><span>2007-02-02 20:00 至 2007-03-03 20:00</span><span>30d20h20m</span><span>
-                    <select>
-                        <option value="1">装港</option>
-                        <option value="2" selected="selected">卸港</option>
+                        <option value="2" selected="selected">卸港锚泊</option>
                         <option value="3">航行</option>
                         <option value="4">锚泊</option>
                         <option value="5">补给</option>
