--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -6,7 +6,7 @@
 
 #voyageList,#voyageDetails,#voyage_StandardRoute,#voyage_StandardGoods{position:fixed;z-index:100;display:none;border-radius:10px;background:rgba(6,2,5,0.8);}
 #voyageList{width:720px;height:440px;top:50px;left:300px;display:none;}
-#voyageDetails{width:720px;height:440px;top:70px;left:300px;display:none;}
+#voyageDetails{width:720px;height:440px;top:50px;left:300px;display:none;}
 
 
 /*航次列表分类选项*/
@@ -92,13 +92,14 @@
 .oneVoyage_DockedInfo{width:100%;height:168px;margin:5px auto;}
 .oneVoyage_DockedInfo>ul:first-child{background:#000;}
 .oneVoyage_DockedInfo>ul>li{width:100%;height:24px;line-height:24px;position:relative;}
-.oneVoyage_DockedInfo>ul>li>span{display:inline-block;text-align:center;font-size:13px;color:#fff;}
-.oneVoyage_DockedInfo>ul>li>span:nth-child(1){width:60px;}
-.oneVoyage_DockedInfo>ul>li>span:nth-child(2){width:260px;}
-.oneVoyage_DockedInfo>ul>li>span:nth-child(3){width:100px;}
-.oneVoyage_DockedInfo>ul>li>span:nth-child(4){width:80px;}
+.oneVoyage_DockedInfo>ul>li>span{display:inline-block;text-align:center;font-size:13px;color:#fff;overflow:hidden;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(1){width:32px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(2){width:250px;padding-right:3px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(3){width:80px;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(4){width:110px;padding:0px 8px;white-space:nowrap;text-overflow:ellipsis;}
+.oneVoyage_DockedInfo>ul>li>span:nth-child(5){width:80px;}
 .oneVoyage_DockedList{height:144px;overflow-y:scroll;}
-.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:rgba(85, 85, 85, 0.71);border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:none;}
+.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:rgba(85, 85, 85, 0.71);border-radius:7px;position: absolute;top:2px;right:8px;cursor:pointer;display:none;}
 /*.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#4d90fe;border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:none;}*/
 /*.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#00B7FF;border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:block;}*/
 .oneVoyage_DockedList>li:hover{background:#217BA2;}
