--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1554,14 +1554,21 @@
 
     var contour_style =  new ol.style.Style({
         stroke: new ol.style.Stroke({
-            color: 'red',
-            lineDash: [1, 2, 3, 4, 5, 6],
+            color: '#ff7f16',
             width: 3
-        }),
-        fill: new ol.style.Fill({
-            color: 'rgba(0, 0, 255, 0.1)'
         })
     });
+
+//    var contour_style =  new ol.style.Style({
+//        stroke: new ol.style.Stroke({
+//            color: 'red',
+//            lineDash: [1, 2, 3, 4, 5, 6],
+//            width: 3
+//        }),
+//        fill: new ol.style.Fill({
+//            color: 'rgba(0, 0, 255, 0.1)'
+//        })
+//    });
 
     var anch_style =  new ol.style.Style({
         stroke: new ol.style.Stroke({
