--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -604,6 +604,7 @@
         <span>航次详情</span>
         <span>(未确认)</span>
         <div class="title_GoBackBtn"></div>
+        <div class="title_MinimizeBtn"><input type="botton" disabled title="最小化"></div>
         <div class="title_offbtn"></div>
     </div>
     <div class="dividing_line"></div>
@@ -877,8 +878,15 @@
     <div class="StandardGoods_SaveBtn">保存</div>
     <div class="StandardGoods_CancelBtn">取消</div>
 </div>
-
-
+<!--航次——最小化窗口-->
+<div id="voyage_Minimize">
+    <div class="fleet_title">
+        <!--<div class="voyage_title">-->
+        <span>航次详情</span>
+        <div class="title_RestoreBtn"><input type="botton" disabled title="向上还原"></div>
+        <div class="title_offbtn"></div>
+    </div>
+</div>
 <!--
     泊位统计分析
 -->
