--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -5,14 +5,12 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/basicSkills.css' />
     <link rel='stylesheet' href='/stylesheets/portInfo.css' />
-    <!--<link rel='stylesheet' href='/stylesheets/maodi.css' />-->
     <link rel='stylesheet' href='/stylesheets/voyage.css' />
     <link rel='stylesheet' href='/stylesheets/newberth.css' />
     <link rel='stylesheet' href='/stylesheets/fleet.css' />
     <link rel='stylesheet' href='/stylesheets/voyageManagement.css' />
     <link rel='stylesheet' href='/stylesheets/standardRoute.css' />
     <link rel="stylesheet" href="/stylesheets/datePicker/ion.calendar.css">
-
     <!--<link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">-->
     <link rel="stylesheet" href="https://openlayers.org/en/v4.1.1/css/ol.css" type="text/css">
     <!--<link rel="stylesheet" href="/stylesheets/openlayer/v4.1.1/css/ol.css">-->
@@ -28,7 +26,8 @@
     <script type="text/javascript" src="/javascripts/blmOperate.js"></script>
     <script type="text/javascript" src="/javascripts/blmBind.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.js"></script>
-
+    <script type="text/javascript" src="/javascripts/WGS84transformer.js"></script>
+    <script type="text/javascript" src="/javascripts/style.js"></script>
 </head>
 <body style="overflow:hidden;">
 <div id="map" class="map" tabindex="0" ></div>
@@ -1440,290 +1439,21 @@
         </tbody>
     </table>
 </div>
-
-<!--&lt;!&ndash;加载显示&ndash;&gt;-->
-<!--<div class="loader"></div>-->
 </body>
-<script type="text/javascript" src="/javascripts/WGS84transformer.js"></script>
-<script type="text/javascript" src="/javascripts/testCommon.js"></script>
+<script type="text/javascript" src="/javascripts/map.js"></script>
 <script type="text/javascript" src="/javascripts/parkArea.js"></script>
+<script type="text/javascript" src="/javascripts/anchShow.js"></script>
+<script type="text/javascript" src="/javascripts/common.js"></script>
 <script type="text/javascript" src="/javascripts/portShow.js"></script>
 <script type="text/javascript" src="/javascripts/pointShow.js"></script>
-<script type="text/javascript" src="/javascripts/contourShow.js"></script>
-<script type="text/javascript" src="/javascripts/anchShow.js"></script>
 <script type="text/javascript" src="/javascripts/statistic.js"></script>
 <script type="text/javascript" src="/javascripts/voyage.js"></script>
 <script type="text/javascript" src="/javascripts/confirm.js"></script>
 <script type="text/javascript" src="/javascripts/fleet.js"></script>
-<!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1RjvgLx-N8yWBBa639e1jHw1wCh6KJUU&callback=initMap" type="text/javascript"></script>-->
-
-<script>
-//    var position_style =  new ol.style.Style({
-//        image: new ol.style.Icon({
-//            scale: 1,
-//            src: 'icon/position.png'
-//        })
-//    });
-    // 泊位图标
-    var berth_style = new ol.style.Style({
-        image: new ol.style.Icon({
-            scale: 0.5,
-            src: 'icon/berth.png',
-            opacity : 1
-        })
-    });
-    // 隐形图标
-    var invisible_style = new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'icon/berth.png',
-            opacity : 0
-        })
-    });
-    // 锚地图标
-    var anchorage_style = new ol.style.Style({
-        image: new ol.style.Icon({
-            scale: 0.5,
-            src: 'icon/anchorage.png'
-        })
-    });
-
-    // 静止区域图标
-    var park_style = {
-        // 锚地图标
-        0: anchorage_style,
-        // 泊位图标
-        1: berth_style
-    };
-
-    // 航线起止点
-    var start_style = new ol.style.Style({
-            image: new ol.style.Icon({
-                src: 'icon/start.png'
-            })
-    });
-
-    // 航线结束点
-    var end_style = new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'icon/stop.png'
-        })
-    });
-
-    // 静止点的显示
-    var point_style = new ol.style.Style({
-        image: new ol.style.Circle({
-            radius: 2,
-            stroke: new ol.style.Stroke({
-                color: 'black'
-            }),
-            fill: new ol.style.Fill({
-                color: 'blue'
-            })
-        })
-    });
-
-    // 航线箭头显示
-    function arrow_style(rotation) {
-        return new ol.style.Style({
-            image: new ol.style.Icon({
-                anchor: [0.75, 0.5],
-                src: 'icon/arrow.png',
-                rotateWithView: true,
-                rotation: -rotation
-            })
-        });
-    }
-
-    // 航线线条显示
-    var contour_style =  new ol.style.Style({
-        stroke: new ol.style.Stroke({
-            color: '#5957ff',
-            width: 3
-        })
-    });
-
-//    var contour_style =  new ol.style.Style({
-//        stroke: new ol.style.Stroke({
-//            color: 'red',
-//            lineDash: [1, 2, 3, 4, 5, 6],
-//            width: 3
-//        }),
-//        fill: new ol.style.Fill({
-//            color: 'rgba(0, 0, 255, 0.1)'
-//        })
-//    });
-
-    // 大锚地显示
-    var anch_style =  new ol.style.Style({
-        stroke: new ol.style.Stroke({
-            color: 'blue',
-            lineDash: [1, 2, 3, 4, 5, 6],
-            width: 3
-        }),
-        fill: new ol.style.Fill({
-            color: 'rgba(0, 0, 255, 0.1)'
-        }),
-        text: new ol.style.Text({
-            // font: '10px sans-serif' 默认这个字体，可以修改成其他的，格式和css的字体设置一样
-            text: '锚地区域',
-            fill: new ol.style.Fill({
-                color: 'red'
-            })
-        })
-    });
-
-    // 被选择的图标
-    var choosed = new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'images/choose.png'
-        })
-    });
-
-    // 泊位确认的按钮
-    var berth_yes = new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'images/berth_nor.png'
-        })
-    });
-
-    // 待选与被选图标
-    var point_status = {
-        0: new ol.style.Style({
-            image: new ol.style.Icon({
-                src: 'images/pointCheck.png',
-                anchor: [0.5, 0.8]
-            })
-        }),
-        1: new ol.style.Style({
-            image: new ol.style.Icon({
-                src: 'images/pointAdd.png',
-                anchor: [0.5, 0.8]
-            })
-        })
-    };
-
-    // 停泊位置显示
-    var sn_style = new ol.style.Style({
-        image: new ol.style.Icon({
-            src: 'images/position.png',
-            anchor: [0.5, 0.8]
-        })
-    });
-
-    // 标尺层
-    var range_source = new ol.source.Vector({wrapX:true});
-    var range_vector = new ol.layer.Vector({
-        id : "draw layer",
-        source : range_source,
-        style: new ol.style.Style({
-            stroke: new ol.style.Stroke({
-                color: '#AE7528',       //测距完成后线颜色
-                width: 2                //测距完成后线宽度
-            })
-        })
-    });
-
-    // 地图基本作画功能
-    var draw = new ol.interaction.Draw({});
-    var source = new ol.source.Vector({wrapX:true});
-    var vector = new ol.layer.Vector({
-        id : "draw layer",
-        source:source,
-        style: new ol.style.Style({
-            stroke: new ol.style.Stroke({
-                color: '#AE7528',       //测距完成后线颜色
-                width: 2                //测距完成后线宽度
-            })
-        })
-    });
-
-    // 初始缩放等级
-    var initLevel = 4;
-
-    // 基本地图
-    var basic = blmol.layer.createGoogleTile('basic');
-    // 卫星地图
-    var satellite = blmol.layer.createGGSatelliteTile("satellite");
-    // 电子海图
-    var haitu = blmol.layer.createESeaTile('haitu');
-    // 停泊区域图标层
-    var icon = blmol.layer.createVectorLayer('icon', 0, 20);
-    // 停泊区域点层
-    var  point = blmol.layer.createVectorLayer('point', 0, 20);
-    // 航线层
-    var  route = blmol.layer.createVectorLayer('route', 0, 20);
-    // 定位图标显示层
-    var position = blmol.layer.createVectorLayer('position', 0, 20);
-    // 当前操作图层
-    var current = blmol.layer.createVectorLayer('current', 0, 20);
-    // 锚地区域图层
-    var anch = blmol.layer.createVectorLayer('anch', 0, 20);
-    //港口图标显示层
-    var portLayer = blmol.layer.createVectorLayer('portLogo',0, 20);
-
-    // 创造地图
-    var map = blmol.map.createMap('map', [-45.496166, -23.907], initLevel, [], true, false, false);
-
-    // 显示的图层
-    blmol.map.addLayer(map, basic);
-    blmol.map.addLayer(map, satellite);
-    blmol.map.addLayer(map, haitu);
-    blmol.map.addLayer(map, icon);
-    blmol.map.addLayer(map, point);
-    blmol.map.addLayer(map, route);
-    blmol.map.addLayer(map, portLayer);
-    blmol.map.addLayer(map, range_vector);
-    blmol.map.addLayer(map, vector);
-    blmol.map.addLayer(map, position);
-    blmol.map.addLayer(map, anch);
-    blmol.map.addLayer(map, current);
-
-    var zoom = 4;
-
-    // 得到港口的所有的泊位，锚地中心点
-    getAllPoints();
-    // 获取所有锚地区域
-    getAllAnch();
-    // 获取所有锚地
-    reqPortBasicInfo();
-    //获取初始地图
-    setMapShow();
-    $('map').css('height',document.body.clientHeight + 'px');
-    //实时监测浏览器窗口高度
-    window.onresize = function(){
-        $(".map").css("height",$(window).height()+"px");
-        $("body").css("height",$(window).height()+"px");
-    };
-    $(".map").css("height",$(window).height()+"px");
-    $("body").css("height",$(window).height()+"px");
-
-    // 针对事件进行操作
-    var currentMouseCoordinate;
-    // 添加鼠标移动监听事件
-    blmol.bind.addOnMouseMoveListener(map,function(map,coordinate,feature,evt){
-        currentMouseCoordinate = coordinate;
-        $('#optain_topLeft_text').text(coordinate[0].toFixed(6)+','+coordinate[1].toFixed(6));
-    });
-    // 监听界面变化
-    var oldLevel = initLevel;
-    var anchStatus = false;
-    blmol.bind.addOnMapMoveEndListener(map, function (map, extent, event) {
-        zoom = blmol.operation.getZoom(map);
-        console.log(zoom);
-        // 获取所有静止区域
-        pointLayer(zoom, extent);
-        // 临界条件
-        if(!anchStatus && ((zoom >= 10 && oldLevel < 10) || (zoom < 10  && oldLevel >= 10))){
-            // 刷新锚地数据, 显示锚地名
-            anchLayer(zoom) // 变化锚地显示
-        }
-        oldLevel = zoom;
-    })
-</script>
 <script type="text/javascript" src="/javascripts/util.js"></script>
 <script type="text/javascript" src="/javascripts/basicSkills.js"></script>
 <script type="text/javascript" src="/javascripts/portInfo.js"></script>
-<script type="text/javascript" src="/javascripts/manage.js"></script>
+<!--<script type="text/javascript" src="/javascripts/manage.js"></script>-->
 <script type="text/javascript" src="/javascripts/jsapi.js"></script>
 <script type="text/javascript" src="/javascripts/corechart.js"></script>      
 <script type="text/javascript" src="/javascripts/jquery.gvChart-1.0.1.min.js"></script>
@@ -1733,7 +1463,7 @@
 <script type="text/javascript" src="/javascripts/anch.js"></script>
 <script type="text/javascript" src="/javascripts/route.js"></script>
 <script type="text/javascript" src="/javascripts/voyageManagement.js"></script>
-<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+<!--<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>-->
 <script src="/javascripts/datePicker/moment.min.js"></script>
 <script src="/javascripts/datePicker/moment.zh-cn.js"></script>
 <script src="/javascripts/datePicker/ion.calendar.min.js"></script>
