--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -654,8 +654,8 @@
                 <!--</ul>-->
             </li>
             <li>吨位：<input type="text" class="DWT" placeholder="400000"> t</li>
-            <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
-            <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
+            <li>出发港：<input type="text" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
+            <li>到达港：<input type="text" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>航行时长：20d20h20m</li>
             <li>航速：00.00kts</li>
             <li>航程：0nm</li>
