--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -52,6 +52,7 @@
 .shipVoyageList_List>li>div{width:24px;height:24px;background:url("/images/ship.png");margin:0 auto;cursor: pointer;}
 .shipVoyageList_List>li>.active{width:24px;height:24px;background:url("/images/ship-active.png");margin:0 auto; cursor: pointer;}
 .shipVoyageList_List>li>span{display:inline-block;width:70px;text-align:center;line-height:16px;height:16px;position:relative;top:-3px;font-size:12px;color:#fff;}
+.shipVoyageList_List>li>.checked{color:#1aea1a;}
 
 /*航次详情——航次信息*/
 #voyageDetails>.fleet_title{width:100%;height:30px;position:relative;}
