--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1322,14 +1322,20 @@
         </div>
         <div class="pier_info pier_UseType span_select">
             <!--<span>用途：</span><span value="01">装货</span>-->
-            <span>用途：</span><span id="use_type_key" value="01">装货</span>
+            <span>用途：</span><span id="use_type_key">装货</span>
             <ul>
-                <li value="01">装货</li>
-                <li value="02">卸货</li>
-                <li value="03">加油</li>
-                <li value="04">补给</li>
-                <li value="05">修船</li>
-                <li value="06">不明</li>
+                <li Purpose="01">装货</li>
+                <li Purpose="02">卸货</li>
+                <li Purpose="03">加油</li>
+                <li Purpose="04">补给</li>
+                <li Purpose="05">修船</li>
+                <li Purpose="06">不明</li>
+                <!--<li value="01">装货</li>-->
+                <!--<li value="02">卸货</li>-->
+                <!--<li value="03">加油</li>-->
+                <!--<li value="04">补给</li>-->
+                <!--<li value="05">修船</li>-->
+                <!--<li value="06">不明</li>-->
             </ul>
         </div>
         <div class="pier_info pier_CargoType">
